
Removed the ScoreCount field from an Assessment Def as it is confusing.

Added a clicktoedit icon to MarkBook column headers.

Change the cutoffdate option for editing assessment columns so that
anyone with course responsibilities selected can edit any in the
current MarrkBook.

Fix to get_assessment_mids for when the assessment is for a previous
year.


Version ClaSS-1.0.32 release (2012/09/26)
-------------------------------------------

Two new fields added to info for Cadidate Number and UCI.

Exposed the date entry date fields for Targets.

Fix to importing assessment scores for a strand.

Fix to retrospective taking of lesson attendance when the attedance
event had been already created.

Very simply config option to allow office and admin staff same student
name order as teachers.

Fix to help tip for components and strands in Report.


Version ClaSS-1.0.31 release (2012/09/23)
-------------------------------------------

A cohort can now be linked to academic commuity groups directly, both
when edited and created through community_group_rename.



Version ClaSS-1.0.30 release (2012/09/18)
-------------------------------------------

Updated the class sizes page in Admin.

Updated the manage homework in Report.

Changed the sharewithparents for comments option to do eportfolio by
default if it is configured.

Changed the CFG->emailguardiancomments to have values of "no","yes" or
"limit".


Version ClaSS-1.0.29 release (2012/09/12)
-------------------------------------------

The component table new preserves curriculum structure from year to
year. TODO: update year_end to match.

Updated ldap scripts to match new class structure.

Improved performance issues with messages.

Updated homework functions to match new class structure.



Version ClaSS-1.0.28 release (2012/09/08)
-------------------------------------------

Added new fields for education to the users table.

Bugfix to list_sid_responsible_users.



Version ClaSS-1.0.27 release (2012/09/02)