@@ -14,6 +14,8 @@ current MarrkBook.
 Fix to get_assessment_mids for when the assessment is for a previous
 year.
 
+Added coloured grade cells for traffic light grade schemes.
+
 
 Version ClaSS-1.0.32 release (2012/09/26)
 -------------------------------------------
